syntax = "proto3";

package evm.tokens.uniswap.v2;

message Events {
  repeated Swap swaps = 1;
  repeated Sync syncs = 2;
  repeated PairCreated pairs_created = 3;
}

message PairCreated {
  // -- transaction --
  bytes tx_hash = 1;

  // -- call --
  optional bytes caller = 2;

  // -- log --
  bytes contract = 3; // log.address (factory)
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  bytes token0 = 10;
  bytes token1 = 11;
  bytes pair = 12;
}

message Sync {
  // -- transaction --
  bytes tx_hash = 1;

  // -- call --
  optional bytes caller = 2;

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string reserve0 = 21; // uint112
  string reserve1 = 22; // uint112
}

message Swap {
  // -- transaction --
  bytes tx_hash = 1;

  // -- call --
  optional bytes caller = 2;

  // -- log --
  bytes contract = 3; // log.address
  uint64 ordinal = 4; // log.ordinal

  // -- event --
  string amount0_in = 21; // uint256
  string amount0_out = 22; // uint256
  string amount1_in = 23; // uint256
  string amount1_out = 24; // uint256
  bytes sender = 25;
  bytes to = 26;
}
